--- a/src/styles/spectate.scss
+++ b/src/styles/spectate.scss
@@ -145,7 +145,7 @@ b {
 @media (max-width: 500px) {
   .cover-hed header {
     margin-top: 50%;
-    transform: translateY(-148%);
+    transform: translateY(-138%);
   }  
 }
 
@@ -546,4 +546,15 @@ header {
     margin-top: 29px;
     margin-bottom: 30px;
   }
+}
+
+.iframe-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+iframe {
+  border:none;
 }
